# Fast-Multi-Kernel-Polar-Decoder

./: CMakeLists.txt
inc/: Encoder.hpp  Frozen_Bits_Generator.hpp  Launcher.hpp  Min_Dist_Construction.hpp  SoftwareModel.hpp
inc/Decoders/: Fast_SSC_Decoder.hpp  SC_Decoder.hpp
inc/Utils/: Contents_SC.hpp  Decoder_Functions.hpp
inc/Utils/Algo/: Tree.hpp  Tree_Node.hpp
src/: Encoder.cpp  Frozen_Bits_Generator.cpp  Min_Dist_Construction.cpp  main.cpp
